# horizon_min

./: .gitignore  GAME_PARAMETERS.md  README.md  SOLUTION_DESCRIPTION.md  demo.html  pyproject.toml
demo/: README.md  app.py  environment.py  game_config.py  game_engine.py  inference.py  renderer.py  requirements.txt
duck_hunt_openenv/: README.md
duck_hunt_openenv/docs/: WEAVE_INTEGRATION_PLAN.md
duck_hunt_openenv/duck_hunt_env/: client.py  models.py
duck_hunt_openenv/experiments/: __init__.py  agent.py  episode.py  evaluation.py  run.py  scorers.py  tools.py
duck_hunt_openenv/server/: Dockerfile  app.py  config.py  environment.py  game_engine.py  renderer.py  requirements.txt
duck_hunt_openenv/tests/: test_game.py  test_random_agent.py
duckhunt/: README  duckhunt.py
duckhunt/game/: __init__.py  driver.py  registry.py  sounds.py  states.py
training/: EVAL_VLM.md  EXPERIMENTAL.md  README.md  REWARD.md  TRAINING.md  eval_vlm.py  evaluate.py  generate_sft_data.py  merge_sft_adapter.py  requirements.txt  run_all.sh  run_training.sh  serve_vlm.sh  train.py  train_sft.py
training/configs/: base_config.yaml  liquidai_3b_config.yaml  liquidai_config.yaml  liquidai_eval.yaml  liquidai_nolora_config.yaml  ministral_config.yaml  qwen3_vl_8b_config.yaml
training/configs/forward_mods/: action_full.yaml  action_spatial_only.yaml  cross_frame_only.yaml  temporal_only.yaml  text_baseline.yaml
training/configs/optimizers/: adamw.yaml  adamw_8bit.yaml  muon.yaml  prodigy.yaml  shampoo.yaml  soap.yaml
training/scripts/: verify_model.py
training/src/: config.py  dataset.py  environment.py  formats.py  model.py  reward.py  trainer.py  utils.py
training/src/forward_mods/: __init__.py  base.py  cross_frame_attention.py  registry.py  spatial_decoder.py  temporal_position.py
training/src/optimizers/: __init__.py  registry.py
